[package]
name = "cheekybackup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
rusqlite = "0.31.0"
zip = "0.6.6"
libsqlite3-sys = { version = "0.28.0", features = ["bundled"]}
cronjob = "0.4.17"
uuid = { version = "1.8.0", features = ["v4"] }
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
